--- a/templates/moreinfo.html
+++ b/templates/moreinfo.html
@@ -4,7 +4,10 @@
 	 <body>
 
 	  <div class="container">
-      <h3>Provide Mamograms</h3>
+			<h3><b><i><u>Complications Involved</u></i></b></h3>
+
+      <h3><b><i><u>References</u></i></b></h3>
+
 
     </div>
 
