--- a/templates/header.html
+++ b/templates/header.html
@@ -33,7 +33,7 @@
   			  <ul class="nav nav-pills nav-stacked">
 					<li><a href='/home'>Home</a></li>
   				<li><a href='/usingdata'>Using Data</a></li>
-  				<li><a href='/usingimages'>Using Images</a></li>
+  				<li><a href='/moreinfo'>More Info</a></li>
   				<li><a href='/preventivemeasures'>Prevention</a></li>
   			  </ul>
   			</div> <!--well bs-sidebar affix-->
