--- a/templates/moreinfo.html
+++ b/templates/moreinfo.html
@@ -5,9 +5,18 @@
 
 	  <div class="container">
 			<h3><b><i><u>Complications Involved</u></i></b></h3>
+			<ul>
+				<li><a href="https://www.ncbi.nlm.nih.gov/pubmed/22824119">https://www.ncbi.nlm.nih.gov/pubmed/22824119</a></li>
+				<li><a href="https://www.ncbi.nlm.nih.gov/books/NBK223389/">https://www.ncbi.nlm.nih.gov/books/NBK223389/</a></li>
+				<li><a href="https://www.physio-pedia.com/Breast_Cancer_Case_Study">https://www.physio-pedia.com/Breast_Cancer_Case_Study</a></li>
+			</ul>
 
       <h3><b><i><u>References</u></i></b></h3>
-
+			<ul>
+				<li><a href="https://www.med.or.jp/english/journal/pdf/2009_01/045_049.pdf">https://www.med.or.jp/english/journal/pdf/2009_01/045_049.pdf</a></li>
+				<li><a href="http://www.nationalbreastcancer.org/">http://www.nationalbreastcancer.org/</a></li>
+				<li><a href="https://www.cancer.org/">https://www.cancer.org/</a></li>
+			</ul>
 
     </div>
 
