--- a/templates/usingdata.html
+++ b/templates/usingdata.html
@@ -17,27 +17,32 @@
 
  <div class="row">
 	<p align="center" >
-	{% if result != None %}
-	<p>Tumor is <b><i><u>{{result}}</u></i></b> </p>
+	{% if result[0] != None %}
+	<p>Tumor is <b><i><u>{{result[0]}}</u></i></b> </p>
+	<p>Accuracy is <b><i><u>{{result[1]}}</u></i></b> </p>
+	<p>Accuracy is <b><i><u>{{ '(%0.2f%%)' % (result[1]) }}</u></i></b> </p>
+	<!-- ({{'%0.2f'| format(result[1]|float)}}%) -->
+
+<!-- 'Accuracy: {0:f}'.format(accuracy_score) -->
 	{% endif %}
 	</p>
-	{% if result == "BENIGN"%}
+	{% if result[0] == "BENIGN"%}
 	<div class="row">
-		<!-- <p>Tumor is <b><i><u>{{result}}</u></i></b> </p> -->
+		<!-- <p>Tumor is <b><i><u>{{result[0]}}</u></i></b> </p> -->
 		<img src="{{url_for('static', filename='img/benign.png',width=50)}}" />
 		<p>You are Safe :) Read more about it below. and check out the instructions <a href="/preventivemeasures">here</a></p>
 	</div>
-	<h1><b><i><u>{{result}}</u></i></b> tumor :: Non-Cancerous Cells</h1>
+	<h1><b><i><u>{{result[0]}}</u></i></b> tumor :: Non-Cancerous Cells</h1>
 	<div class='kandu'>If the cells are not cancerous, the tumor is benign. It won't invade nearby tissues or spread to other areas of the body (metastasize). A benign tumor is less worrisome unless it is pressing on nearby tissues, nerves, or blood vessels and causing damage. Fibroids in the uterus or lipomas are examples of benign tumors. Benign tumors may need to be removed by surgery. They can grow very large, sometimes weighing pounds. They can be dangerous, such as when they occur in the brain and crowd the normal structures in the enclosed space of the skull.They can press on vital organs or block channels. Also, some types of benign tumors such as intestinal polyps are considered precancerous and are removed to prevent them becoming malignant. Benign tumors usually don't recur once removed, but if they do it is usually in the same place.
 	</div>
-	{% elif result == "MALIGNANT"%}
+	{% elif result[0] == "MALIGNANT"%}
 	<div class="row">
-		<!-- <p>Tumor is <b><i><u>{{result}}</u></i></b> </p> -->
+		<!-- <p>Tumor is <b><i><u>{{result[0]}}</u></i></b> </p> -->
 		<img src="{{url_for('static', filename='img/malignant.jpeg',width=50)}}" />
 		<p>Don't Worry :) Read more about it below. and check out the instructions <a href="/preventivemeasures">here</a></p>
 	</div>
 
-	<h1><b><i><u>{{result}}</u></i></b> tumor :: Cancerous Cells</h1>
+	<h1><b><i><u>{{result[0]}}</u></i></b> tumor :: Cancerous Cells</h1>
 	<div class="kandu">Malignant means that the tumor is made of cancer cells and it can invade nearby tissues.Some cancer cells can move into the bloodstream or lymph nodes, where they can spread to other tissues within the body—this is called metastasis. Cancer can occur anywhere in the body including the breast, intestines, lungs, reproductive organs, blood, and skin. For example, breast cancer begins in the breast tissue and may spread to lymph nodes in the armpit if it's not caught early enough and treated. Once breast cancer has spread to the lymph nodes, the cancer cells can travel to other areas of the body, like the liver or bones. The breast cancer cells can then form tumors in those locations. A biopsy of these tumors might show characteristics of the original breast cancer tumor.
 	</div>
 	{% endif %}
