--- a/templates/header.html
+++ b/templates/header.html
@@ -4,7 +4,7 @@
 	<title>Breast Cancer Detection</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
-	<link rel="stylesheet" href="/static/css/akash.css">
+	<!-- <link rel="stylesheet" href="/static/css/akash.css"> -->
 	<link rel="shortcut icon" href="{{ url_for('static', filename='img/logo.jpeg') }}">
 </head>
 
