--- a/templates/moreinfo.html
+++ b/templates/moreinfo.html
@@ -16,6 +16,13 @@
 				<li><a href="https://www.med.or.jp/english/journal/pdf/2009_01/045_049.pdf">https://www.med.or.jp/english/journal/pdf/2009_01/045_049.pdf</a></li>
 				<li><a href="http://www.nationalbreastcancer.org/">http://www.nationalbreastcancer.org/</a></li>
 				<li><a href="https://www.cancer.org/">https://www.cancer.org/</a></li>
+				<li><a href="https://www.healthline.com/health/biopsy#types">https://www.healthline.com/health/biopsy#types</a></li>
+			</ul>
+
+			<h3><b><i><u>Help</u></i></b></h3>
+			<ul>
+				<li><a href="http://thepinkinitiative.org/resources/index.html">http://thepinkinitiative.org/resources/index.html</a></li>
+				<li><a href="http://thepinkinitiative.org/">http://thepinkinitiative.org/</a></li>
 			</ul>
 
     </div>
