--- a/templates/header.html
+++ b/templates/header.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Breast Cancer Detection</title>
+	<title>Breast Cancer Classifier</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
 	<link rel="shortcut icon" href="{{ url_for('static', filename='img/logo.jpeg') }}">
@@ -19,7 +19,7 @@
   			  <div class="col-sm-10">
   				  <br>
 						<center>
-  				  <h3><u><b><i>Breast Cancer Detector</i></b></u></h3>
+  				  <h3><u><b><i>Breast Cancer Classifier</i></b></u></h3>
   				  </center>
   			  </div>
   </div><hr>
